# smartvaults

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  USERS.md  config.toml  rust-toolchain.toml  rustfmt.toml
bindings/coinstr-ffi/: Cargo.toml  Makefile  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
bindings/coinstr-ffi/bindings-android/lib/: proguard-rules.pro
bindings/coinstr-ffi/bindings-swift/: .gitignore  Package.swift
bindings/coinstr-ffi/bindings-swift/coinstrFFI.xcframework/: Info.plist
bindings/coinstr-ffi/src/: cache.rs  client.rs  coinstr.udl  error.rs  lib.rs  policy.rs  proposal.rs
bindings/coinstr-sdk-ffi/: Cargo.toml  Makefile  README.md  build.rs  uniffi.toml
bindings/coinstr-sdk-ffi/.cargo/: config.toml
bindings/coinstr-sdk-ffi/bindings-android/: build.gradle.kts
bindings/coinstr-sdk-ffi/bindings-android/lib/: build.gradle.kts  proguard-rules.pro
bindings/coinstr-sdk-ffi/bindings-python/: .gitignore  MANIFEST.in  README.md  setup.py
bindings/coinstr-sdk-ffi/bindings-python/examples/: client.py  drop.py  restore.py
bindings/coinstr-sdk-ffi/bindings-swift/: .gitignore  Package.swift
bindings/coinstr-sdk-ffi/bindings-swift/coinstr_sdkFFI.xcframework/: Info.plist
bindings/coinstr-sdk-ffi/src/: abortable.rs  address.rs  amount.rs  approval.rs  balance.rs  client.rs  coinstr_sdk.udl  config.rs  contact.rs  descriptor.rs  error.rs  key.rs  lib.rs  logger.rs  message.rs  metadata.rs  network.rs  nip46.rs  policy.rs  proposal.rs  relay.rs  seed.rs  signer.rs  transaction.rs  user.rs  utxo.rs
bindings/smartvaults-core-js/: Cargo.toml  README.md  package.json  rust-toolchain.toml  tsconfig.json
bindings/smartvaults-core-js/examples/: coldcard-export.json  policy.js  signer.js
bindings/smartvaults-core-js/scripts/: build.sh  epilogue.js
bindings/smartvaults-core-js/src/: descriptor.rs  error.rs  lib.rs  network.rs  recipient.rs  signer.rs
bindings/smartvaults-sdk-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  uniffi.toml
bindings/smartvaults-sdk-ffi/bindings-android/: build.gradle.kts
bindings/smartvaults-sdk-ffi/bindings-python/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/smartvaults-sdk-ffi/bindings-swift/: .gitignore  Package.swift
bindings/smartvaults-sdk-ffi/src/: abortable.rs  abortable.udl  address.rs  address.udl  amount.rs  amount.udl  balance.rs  balance.udl  client.rs  client.udl  config.rs  config.udl  descriptor.rs  descriptor.udl  error.rs  error.udl  key_agent.rs  key_agent.udl  lib.rs  message.rs  message.udl  namespace.udl  network.rs  network.udl  nip46.rs  nip46.udl  nostr.udl  nostr_sdk.udl  policy.udl  proposal.udl  seed.rs  seed.udl  signer.rs  signer.udl  smartvaults_sdk.udl  transaction.rs  transaction.udl  user.rs  user.udl
coinstr/: Cargo.toml
coinstr-cli/: Cargo.toml  README.md
coinstr-cli/src/: dir.rs  main.rs  util.rs
coinstr-cli/src/cli/: io.rs  mod.rs  types.rs
coinstr-cli/src/util/: format.rs  mod.rs
coinstr-core/: Cargo.toml
coinstr-core/examples/: extract_public_keys.rs
coinstr-core/src/: client.rs  constants.rs  keychain.rs  lib.rs  nostr.rs  policy.rs  proposal.rs  reserves.rs  thread.rs  util.rs
coinstr-core/src/cache/: mod.rs
coinstr-core/src/client/: blocking.rs  mod.rs
coinstr-core/src/policy/: mod.rs
coinstr-core/src/util/: encryption.rs  format.rs  mod.rs
coinstr/src/: constants.rs  main.rs
coinstr/src/app/: cache.rs  context.rs  message.rs  mod.rs  sync.rs
coinstr/src/app/component/: balances.rs  (+3 more)
coinstr/src/component/: button.rs  icon.rs  mod.rs  numeric_input.rs  rule.rs  text.rs  text_input.rs
coinstr/src/start/: context.rs  message.rs  mod.rs
coinstr/src/theme/: color.rs  font.rs  icon.rs  mod.rs
crates/coinstr/: Cargo.toml  build.rs
crates/coinstr-cli/: Cargo.toml  build.rs
crates/coinstr-cli/src/: main.rs  util.rs
crates/coinstr-core/: Cargo.toml  README.md
crates/coinstr-core/examples/: huge-multisig.rs  templates.rs
crates/coinstr-core/migrations/: 001_init.sql
crates/coinstr-core/src/: client.rs  constants.rs  lib.rs  proposal.rs  reserves.rs  signer.rs  thread.rs  types.rs  util.rs
crates/coinstr-protocol/: Cargo.toml  README.md
crates/coinstr-protocol/src/: lib.rs
crates/coinstr-sdk/: Cargo.toml  README.md
crates/coinstr-sdk-manager/: Cargo.toml
crates/coinstr-sdk-manager/src/: lib.rs  manager.rs  storage.rs  wallet.rs
crates/coinstr-sdk-sqlite/: Cargo.toml  README.md
crates/coinstr-sdk-sqlite/migrations/: 001_init.sql
crates/coinstr-sdk-sqlite/src/: encryption.rs  error.rs  lib.rs  migration.rs  model.rs
crates/coinstr-sdk/examples/: create.rs  open.rs  restore.rs
crates/coinstr-sdk/migrations/: 001_init.sql  002_notifications.sql  003_approvals.sql  003_nostr_connect.sql  004_relays.sql  004_signers.sql  005_labels.sql  006_timechain.sql  007_frozen_utxos.sql
crates/coinstr-sdk/src/: client.rs  constants.rs  lib.rs  logger.rs  prelude.rs
crates/coinstr/src/: constants.rs  main.rs
crates/smartvaults-cli/: Cargo.toml  README.md  build.rs
crates/smartvaults-cli/src/: main.rs  util.rs
crates/smartvaults-core/: Cargo.toml  README.md
crates/smartvaults-core/examples/: huge-multisig.rs  hwi.rs  templates.rs
crates/smartvaults-core/src/: constants.rs  hwi.rs  lib.rs  recipient.rs  reserves.rs  signer.rs  types.rs  util.rs
crates/smartvaults-desktop/: Cargo.toml
crates/smartvaults-desktop/src/: constants.rs  main.rs
crates/smartvaults-protocol/: Cargo.toml  README.md  build.rs
crates/smartvaults-protocol/examples/: key_agent.rs  vault.rs
crates/smartvaults-protocol/src/: lib.rs
crates/smartvaults-sdk/: Cargo.toml  README.md  build.rs
crates/smartvaults-sdk-sqlite/: Cargo.toml  README.md
crates/smartvaults-sdk-sqlite/migrations/: 001_init.sql  002_drop.sql  003_drop_again.sql
crates/smartvaults-sdk-sqlite/src/: encryption.rs  error.rs  lib.rs  migration.rs  model.rs
crates/smartvaults-sdk/examples/: create.rs  open.rs  restore.rs
crates/smartvaults-sdk/src/: constants.rs  error.rs  lib.rs  logger.rs  prelude.rs
(+539 files in other folders)
