[workspace]
members = [
    "bindings/smartvaults-sdk-ffi",
    "crates/smartvaults-cli",
    "crates/smartvaults-core",
    "crates/smartvaults-desktop",
    "crates/smartvaults-protocol",
    "crates/smartvaults-sdk",
    "crates/smartvaults-sdk-sqlite",
]
default-members = ["crates/smartvaults-desktop", "crates/smartvaults-cli"]
resolver = "2"

[workspace.package]
version = "0.3.0"
description = "Bitcoin multi-custody signature orchestration"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Max Gravitt"]
homepage = "https://github.com/smartvaults/smartvaults"
repository = "https://github.com/smartvaults/smartvaults.git"
license = "MIT"
keywords = ["bitcoin", "nostr"]

[workspace.dependencies]
once_cell = "1.18"
serde = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", default-features = false }

[patch.crates-io]
electrum-client = { git = "https://github.com/yukibtc/rust-electrum-client", rev = "a331ae80591065fb331c1c1599ff85078b5154a4" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"