[workspace]
members = ["bindings/*", "crates/*"]
default-members = ["crates/smartvaults-desktop", "crates/smartvaults-cli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
description = "Bitcoin multi-custody signature orchestration"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Max Gravitt"]
homepage = "https://github.com/smartvaults/smartvaults"
repository = "https://github.com/smartvaults/smartvaults.git"
license = "MIT"
keywords = ["bitcoin", "nostr"]

[workspace.dependencies]
async-utility = "0.2"
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "50c549b5aca3c58bcffce359f4937a8c3eb57a35", default-features = false }
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", rev = "50c549b5aca3c58bcffce359f4937a8c3eb57a35" }
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "18b10a4ed5213808d927fc45357a49116600a4d7", default-features = false }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "18b10a4ed5213808d927fc45357a49116600a4d7", default-features = false }
nostr-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "18b10a4ed5213808d927fc45357a49116600a4d7" }
nostr-sdk-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "18b10a4ed5213808d927fc45357a49116600a4d7" }
once_cell = "1.19"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", default-features = false }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "59c1e3ef15b1ea5143402e25264e933dbf8d1a1f" }
wasm-bindgen = { version = "0.2", default-features = false }

[patch.crates-io]
electrum-client = { git = "https://github.com/yukibtc/rust-electrum-client", rev = "a331ae80591065fb331c1c1599ff85078b5154a4" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"