[workspace]
members = ["bindings/*", "crates/*"]
default-members = ["crates/smartvaults-desktop", "crates/smartvaults-cli"]
resolver = "2"

[workspace.package]
version = "0.4.0"
description = "Bitcoin multi-custody signature orchestration"
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>", "Max Gravitt"]
homepage = "https://github.com/smartvaults/smartvaults"
repository = "https://github.com/smartvaults/smartvaults.git"
license = "MIT"
keywords = ["bitcoin", "nostr"]

[workspace.dependencies]
async-utility = "0.2"
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "e5aa4fe9e6dc9448b565b6549225558d42dbae8f", default-features = false }
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", rev = "e5aa4fe9e6dc9448b565b6549225558d42dbae8f" }
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "1b550b22c03c1224704e17743f515ae4f92e9791", default-features = false }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "1b550b22c03c1224704e17743f515ae4f92e9791", default-features = false }
nostr-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "1b550b22c03c1224704e17743f515ae4f92e9791" }
nostr-sdk-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "1b550b22c03c1224704e17743f515ae4f92e9791" }
once_cell = "1.19"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", default-features = false }
uniffi = "0.27"
wasm-bindgen = { version = "0.2", default-features = false }

[patch.crates-io]
electrum-client = { git = "https://github.com/yukibtc/rust-electrum-client", rev = "a331ae80591065fb331c1c1599ff85078b5154a4" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"