[package]
name = "coinstr-cli"
version = "0.1.0"
edition = "2021"
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
coinstr-core = { version = "0.1", path = "../coinstr-core" }
dialoguer = "0.10"
dirs = "5.0"
env_logger = "0.10"
owo-colors = "3.5"
prettytable-rs = "0.10"
termtree = "0.4"
