[package]
name = "coinstr-core"
version = "0.1.0"
edition = "2021"
description = "Coinstr's Core library."
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
electrum = ["bdk/electrum"]
key-value-db = ["bdk/key-value-db"]
blocking = ["nostr-sdk/blocking"]

[dependencies]
bdk = { version = "0.27", default-features = false, features = ["compiler"] }
keechain-core = { git = "https://github.com/yukibtc/keechain", rev = "b6a556ecd27794d35f547221c3daa119979ca3d5", features = ["nostr"] }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", branch = "bitcoin-v0.29", default-features = false, features = ["nip04", "nip06", "nip19"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bdk = { version = "0.27", default-features = false, features = ["async-interface"] }
