[package]
name = "coinstr-core"
version = "0.1.0"
edition = "2021"
description = "Coinstr's Core library."
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
reserves = ["dep:bitcoinconsensus"]
electrum = ["bdk/electrum"]
key-value-db = ["bdk/key-value-db"]
blocking = ["nostr-sdk/blocking"]

[dependencies]
bdk = { version = "0.28", default-features = false, features = ["std", "compiler"] }
bitcoinconsensus = { version = "0.20.2-0.5.0", optional = true }
keechain-core = { git = "https://github.com/yukibtc/keechain", rev = "41557e4d001247af6bc7895972996741cd3fdd53", features = ["nostr"] }
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", branch = "bitcoin-v0.29", default-features = false, features = ["nip04", "nip06", "nip19"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bdk = { version = "0.27", default-features = false, features = ["async-interface"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
