[package]
name = "coinstr"
version = "0.1.0"
edition = "2021"
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true

[dependencies]
coinstr-common = { version = "0.1", path = "../coinstr-common" }
coinstr-core = { version = "0.1", path = "../coinstr-core" }
iced = { version = "0.8", default-features = false, features = ["image", "glow", "qr_code", "svg", "tokio"] }
iced_lazy = "0.5"
iced_native = "0.9"
once_cell = "1.17"
rfd = "0.11"
tokio = { version = "1", features = ["full"] }
