[package]
name = "coinstr-sdk-ffi"
version.workspace = true
edition = "2021"
description = "Coinstr SDK FFI."
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "coinstr_sdk_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
async-utility = "0.1"
coinstr-sdk = { path = "../../crates/coinstr-sdk", features = ["blocking"] }
nostr-sdk-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "57c3550ad91b173d97841af79dbf2b77a2abef4b" }
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
uniffi = { version = "0.24", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.24", features = ["build"] }
