cargo-features = ["per-package-target"]

[package]
name = "smartvaults-core-js"
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish = false
forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
smartvaults-core = { path = "../../crates/smartvaults-core", default-features = false }
wasm-bindgen = { workspace = true, features = ["std"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
