#cargo-features = ["per-package-target"]

[package]
name = "smartvaults-core-js"
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish = false
#forced-target = "wasm32-unknown-unknown"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
serde_json.workspace = true
smartvaults-core = { path = "../../crates/smartvaults-core", default-features = false }
wasm-bindgen = { workspace = true, features = ["std"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
