[package]
name = "smartvaults-sdk-ffi"
version.workspace = true
edition = "2021"
description = "Smart Vaults SDK FFI."
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "smartvaults_sdk_ffi"
crate-type = ["cdylib", "staticlib"]
doctest = false

[dependencies]
async-utility = "0.1"
nostr-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "c732bb0f67d6e3c2455f1232aeed5966ad088c56" }
nostr-sdk-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "c732bb0f67d6e3c2455f1232aeed5966ad088c56" }
smartvaults-sdk = { path = "../../crates/smartvaults-sdk", features = ["blocking"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
uniffi.workspace = true
