[package]
name = "smartvaults-sdk-ffi"
version.workspace = true
edition = "2021"
description = "Smart Vaults SDK FFI."
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "smartvaults_sdk_ffi"
crate-type = ["cdylib", "staticlib"]
doctest = false

[dependencies]
async-utility = "0.1"
nostr-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "dcbee7088f1b95ac29500b659a78e7e7b1114dcc" }
nostr-sdk-ffi = { git = "https://github.com/rust-nostr/nostr", rev = "dcbee7088f1b95ac29500b659a78e7e7b1114dcc" }
smartvaults-sdk = { path = "../../crates/smartvaults-sdk", features = ["blocking"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
uniffi.workspace = true
