[package]
name = "smartvaults-sdk-ffi"
version.workspace = true
edition = "2021"
description = "Smart Vaults SDK FFI."
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "smartvaults_sdk_ffi"
crate-type = ["cdylib", "staticlib"]
doctest = false

[dependencies]
async-utility = "0.1"
nostr-ffi.workspace = true
nostr-sdk-ffi.workspace = true
smartvaults-sdk = { path = "../../crates/smartvaults-sdk", features = ["blocking"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing.workspace = true
uniffi.workspace = true
