[package]
name = "coinstr-cli"
version.workspace = true
edition = "2021"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
coinstr-common = { path = "../coinstr-common" }
coinstr-sdk = { path = "../coinstr-sdk" }
dialoguer = "0.10"
once_cell = "1.18"
owo-colors = "3.5"
prettytable-rs = "0.10"
regex = "1.8"
rustyline = { version = "11.0", default-features = false }
termtree = "0.4"
tokio = { version = "1.27", features = ["macros"] }
