[package]
name = "coinstr-core"
version.workspace = true
edition = "2021"
description = "Coinstr's Core library."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
rust-version = "1.60.0"

[features]
default = []
reserves = ["dep:bitcoinconsensus"]

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "d6bcd9b725a63b5db9157fb11a827a472ddcf73d", default-features = false, features = ["std", "compiler"] }
bitcoinconsensus = { version = "0.20.2-0.5.0", optional = true }
keechain-core = { git = "https://github.com/yukibtc/keechain", rev = "101d729ea0026ceeac5bfea8c241715468e93ae6" }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
