[package]
name = "coinstr-core"
version.workspace = true
edition = "2021"
description = "Protocol primitives and bitcoin TX building/singning logic"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
rust-version = "1.60.0"

[features]
default = []
reserves = ["dep:bitcoinconsensus"]

[dependencies]
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "2867e88b64b4a8cf7136cc562ec61c077737a087", default-features = false, features = ["std", "compiler"] }
bitcoinconsensus = { version = "0.20.2-0.5.0", optional = true }
keechain-core = { git = "https://github.com/yukibtc/keechain", rev = "ff8c2dceb9a5376683743847df6d32973a60968f" }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }

[[example]]
name = "huge-multisig"