[package]
name = "coinstr-protocol"
edition = "2021"
version.workspace = true
description = "Implementation of the Coinstr protocol"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[dependencies]
coinstr-core = { path = "../coinstr-core", default-features = false }
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "38621e54e994d4c5b263c739eb16778fbca9620e", default-features = false, features = ["nip04"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }