[package]
name = "coinstr-sdk-sqlite"
version.workspace = true
edition = "2021"
description = "Coinstr SDK SQLite"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[dependencies]
chacha20poly1305 = "0.10"
coinstr-core = { path = "../coinstr-core" }
coinstr-protocol = { path = "../coinstr-protocol" }
deadpool-sqlite = "0.5"
rusqlite = { version = "0.28", features = ["bundled", "serde_json"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
