[package]
name = "coinstr-sdk"
version.workspace = true
edition = "2021"
description = "Coinstr SDK"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
blocking = ["async-utility/blocking", "nostr-sdk/blocking"]

[dependencies]
async-utility = "0.1"
bdk_electrum = { git = "https://github.com/bitcoindevkit/bdk", rev = "d6bcd9b725a63b5db9157fb11a827a472ddcf73d" }
coinstr-core = { path = "../coinstr-core", features = ["reserves"] }
coinstr-protocol = { path = "../coinstr-protocol" }
futures-util = "0.3"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "ea87febbbd4c1c5665461aede8fbd84766560464", default-features = false, features = ["nip04", "nip06", "nip19", "nip46"] }
parking_lot = "0.12"
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = { version = "0.29", features = ["bundled", "serde_json", "url"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = "0.3"
