[package]
name = "coinstr"
version.workspace = true
edition = "2021"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
keywords.workspace = true

[features]
default = []
hwi = ["coinstr-sdk/hwi"]

[dependencies]
async-stream = "0.3"
coinstr-common = { path = "../coinstr-common" }
coinstr-sdk = { path = "../coinstr-sdk" }
iced = { version = "0.9", default-features = false, features = ["image", "glow", "qr_code", "svg", "tokio"] }
iced_aw = { version = "0.5", default-features = false, features = ["card", "modal"] }
iced_futures = "0.7"
iced_lazy = "0.6"
iced_native = "0.10"
notify-rust = "4.8"
once_cell = "1.17"
rfd = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
webbrowser = "0.8"

[package.metadata.deb]
assets = [
    ["../../target/x86_64-unknown-linux-gnu/release/coinstr", "/usr/bin/", "755"],
    ["../../release/linux/coinstr.desktop", "/usr/share/applications/coinstr.desktop", "644"],
    ["../../release/linux/coinstr.png", "/usr/share/icons/coinstr.png", "644"],
]
