[package]
name = "coinstr"
version.workspace = true
edition = "2021"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
keywords.workspace = true

[features]
default = []

[dependencies]
async-stream = "0.3"
coinstr-sdk = { path = "../coinstr-sdk" }
dirs = "5.0"
iced = { git = "https://github.com/yukibtc/iced", rev = "304aa3badb885c7c8bb5bcd6160dc5c9c7b950b2", default-features = false, features = ["advanced", "lazy", "qr_code", "svg", "tokio", "wgpu"] }
iced_aw = { git = "https://github.com/yukibtc/iced_aw", rev = "c09b5eeac27db1bef7329db418a75397096cd9bc", default-features = false, features = ["card", "modal"] }
iced_futures = { git = "https://github.com/yukibtc/iced", rev = "304aa3badb885c7c8bb5bcd6160dc5c9c7b950b2" }
lyon_algorithms = "1.0"
notify-rust = "4.8"
once_cell = { workspace = true }
rfd = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
webbrowser = "0.8"

[package.metadata.deb]
assets = [
    ["../../target/x86_64-unknown-linux-gnu/release/coinstr", "/usr/bin/", "755"],
    ["../../release/linux/coinstr.desktop", "/usr/share/applications/coinstr.desktop", "644"],
    ["../../release/linux/coinstr.png", "/usr/share/icons/coinstr.png", "644"],
]
