[package]
name = "smartvaults-cli"
version.workspace = true
edition = "2021"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
smartvaults-sdk = { path = "../smartvaults-sdk" }
dialoguer = "0.11"
dirs = "5.0"
once_cell = "1.19"
owo-colors = "4.0"
prettytable-rs = "0.10"
regex = "1.10"
rustyline = { version = "12.0", default-features = false }
termtree = "0.4"
tokio = { workspace = true, features = ["macros"] }
