[package]
name = "smartvaults-core"
version.workspace = true
edition = "2021"
description = "Protocol primitives and bitcoin TX building/singning logic"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
rust-version = "1.63.0"

[features]
default = []
reserves = ["dep:bitcoinconsensus"]

[dependencies]
bdk = { workspace = true, default-features = false, features = ["std", "compiler"] }
bitcoinconsensus = { version = "0.20.2-0.5.0", optional = true }
keechain-core = { git = "https://github.com/yukibtc/keechain", rev = "252402256e43bddd2914fc4533591823f3f231b8" }
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[example]]
name = "huge-multisig"

[[example]]
name = "templates"