[package]
name = "smartvaults-core"
version.workspace = true
edition = "2021"
description = "Protocol primitives and bitcoin TX building/singning logic"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
rust-version = "1.63.0"

[features]
default = []
reserves = ["dep:bitcoinconsensus"]

[dependencies]
bdk = { workspace = true, default-features = false, features = ["std", "compiler"] }
bitcoinconsensus = { version = "0.20.2-0.5.0", optional = true }
keechain-core = { git = "https://github.com/yukibtc/keechain", rev = "9e21d85a586e05b5eea99ec162143ea91c0be167" }
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[example]]
name = "huge-multisig"

[[example]]
name = "templates"