[package]
name = "smartvaults-desktop"
version.workspace = true
edition = "2021"
description.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../../README.md"
keywords.workspace = true

[features]
default = []

[dependencies]
async-stream = "0.3"
smartvaults-sdk = { path = "../smartvaults-sdk" }
dirs = "5.0"
iced = { git = "https://github.com/yukibtc/iced", rev = "4f79fbab1824183910e2c7193d904010b233780f", default-features = false, features = ["advanced", "lazy", "qr_code", "svg", "tokio", "wgpu"] }
iced_futures = { git = "https://github.com/yukibtc/iced", rev = "4f79fbab1824183910e2c7193d904010b233780f" }
lyon_algorithms = "1.0"
once_cell = { workspace = true }
rfd = "0.12"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
webbrowser = "0.8"

[package.metadata.deb]
assets = [
    ["../../target/x86_64-unknown-linux-gnu/release/smartvaults-desktop", "/usr/bin/", "755"],
    ["../../release/linux/app.smartvaults.desktop", "/usr/share/applications/app.smartvaults.desktop", "644"],
    ["../../release/linux/smartvaults.png", "/usr/share/icons/smartvaults.png", "644"],
]
