[package]
name = "smartvaults-protocol"
edition = "2021"
version.workspace = true
description = "Implementation of the Smart Vaults protocol"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[dependencies]
smartvaults-core = { path = "../smartvaults-core", default-features = false }
nostr = { git = "https://github.com/rust-nostr/nostr", rev = "c732bb0f67d6e3c2455f1232aeed5966ad088c56", default-features = false, features = ["std", "nip04"] }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }