[package]
name = "smartvaults-protocol"
edition = "2021"
version.workspace = true
description = "Implementation of the Smart Vaults protocol"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true

[features]
default = []
hwi = ["smartvaults-core/hwi"]

[dependencies]
async-trait.workspace = true
smartvaults-core = { path = "../smartvaults-core", default-features = false }
nostr = { workspace = true, features = ["std", "nip04", "nip44"] }
nostr-signer = { workspace = true, features = ["nip07", "nip44", "nip46"] }
once_cell.workspace = true
prost = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build = "0.12"